changed everything to arrays

--- a/Wk1/goal2_assign_duel2/index.html
+++ b/Wk1/goal2_assign_duel2/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
 	<title>Fight App</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Goal 2">
+	<meta name="author" content="Kaneisha Whipple">
 	
 	<link rel="stylesheet" href="css/style.css">
 
